# MyScripts

./: .gitignore  Makefile  fileio.py  format_funcs.py  genImageFromLatex.py  md2html.py  out.html  replaceMdMath.py  tableTest.html  tableTest.md  temp.html  temp.md  template.tex  test.html  test.md  test.tex  tests0_in.md  tests0_out.md  tests1_in.md
c/: Makefile
c/c_shapes/: gen_h_files.py  shape_primitives.c  test
c/sdl_c_template/: Makefile
c/sdl_emscripten_template/: Makefile
c/sdl_pong/: Makefile  README.md  audio_player.c  ball.c  compile_commands.json  compile_flags.txt  constants.c  init_sdl.c  input_handler.c  paddle.c  paddle.h  pong.c  pong.h  score_keeper.c  web_pong.c
c/sdl_project_template/: Makefile
c/sdl_render_playground/: Makefile  README.md
c/sdl_sketching_demo/: Makefile  README.md
c/sdl_template/: compile_commands.json
c/sdl_templates/: init_sdl.c  init_sdl.h  main.c
html/: temp.html
love/MyGame/: .luarc.json  Makefile  main.lua
python/: 100  2dXforms.py  Makefile  ModulevsPackageNotes.md  Point2D.py  Rect.py  RectArrays.py  Shape.py  Vec2D.py  Xform.py  err.txt  formatSideBySideMdImages.py  generate_brush_texture.py  generate_paper_texture.py  gui_test.py  my_ofdm.py  pulse_shaping.py  pyGameTest.py  pyqtTest.py  renumberMdFigures.py  renumberMdTables.py  replaceMdImagePaths.py  sim1.py  tags  xforms.py
python/PackageExample/: README.md  pyproject.toml
python/PackageExample/src/jShapes/: shapes.py  xforms.py
python/PackageExample/tests/: pyGameTest.py
python/ShapesPackage/: Checkbox.py  DrawFuncs.py  Point2D.py  (+9 more)
(+62 files in other folders)
