[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "jShapes"
version = "0.0.1"
authors = [
  { name="Joey Schnecker", email="" },
]
description = "A package with some basic shapes and math."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = ""
Issues = ""
